external ajax request & image block spacing issue

--- a/assets/reactjs/src/blocks/image/style.scss
+++ b/assets/reactjs/src/blocks/image/style.scss
@@ -40,6 +40,9 @@
                 line-height: normal;
 			}
 		}
+		div.qubely-image-container {
+			font-size: 0;
+		}
 	}
 
 	.qubely-has-frame {
